# OS_kursovaya

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server1/: Cargo.toml  server_log.txt
server1/src/: main.rs
server2/: Cargo.toml
server2/src/: main.rs
