[package]
name = "server1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server1"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3", features = ["winuser"] }
serde_json = "1.0"
chrono = "0.4"
ctrlc = "3.4.7"
rayon = "1.5"